--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.5",
-    "react-scripts": "1.1.4",
     "react-router-dom": "^4.2.0",
+    "react-scripts": "1.1.4",
+    "react-select2-wrapper": "^1.0.4-beta6",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0"
   }
